# interflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yml  release-please-config.json
interflow-backend/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
interflow-backend/docs/: s3-configuration.md
interflow-backend/examples/: README.md  test_rappatriement_debug.py
interflow-backend/examples/decoders/: exemple_besoins_decoder.py  exemple_rappatriement_decoder.py  exemple_reception_decoder.py  exemple_stock_decoder.py
interflow-backend/examples/repositories/: exemple_import_csv_besoins.py  exemple_import_csv_commandes.py  exemple_import_csv_stocks.py  exemple_import_json_matieres.py
interflow-backend/src/api/: analyse.py  besoins.py  main.py  matieres.py  rappatriements.py  receptions.py  server.py  stock.py
interflow-backend/src/lib/: paths.py  utils.py
interflow-backend/src/lib/decoders/: decoder.py
interflow-backend/src/lib/logging/: __init__.py  analyse_logger.py
interflow-backend/src/models/: __init__.py  analyse.py  besoin.py  matieres.py  rappatriement.py  reception.py  stock.py
interflow-backend/src/repositories/: README.md  __init__.py  base_repository.py  besoins_repository.py  matieres_premieres_repository.py  rappatriements_repository.py  receptions_repository.py  stocks_repository.py  storage_strategies.py
interflow-backend/src/scripts/: analyse.py
interflow-backend/src/services/: __init__.py  analyse_display_service.py  analyse_service.py  data_service.py
(+100 files in other folders)
