[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "interflow-backend"
version = "0.0.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "John Doe", email = "johndoe@gmail.com"}]

dependencies = [
  "tomli",
  "uvicorn",
  "fastapi",
  "pydantic",
  "python-multipart",
  "pandas>=2.0.0",
  "openpyxl>=3.0.0"
]

[project.optional-dependencies]
ci = ["build", "black", "coverage", "pylint", "flake8"]
cd = ["twine"]

[project.scripts]
analyse = "scripts.analyse:main"
run_api = "api.server:run"

# [tool.black]
# line-length = 79
# use-tabs = false
# tab-width = 2
