[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "interflow-backend"
version = "0.0.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "John Doe", email = "johndoe@gmail.com"}]

dependencies = [
  "tomli==2.2.1",
  "uvicorn==0.35.0",
  "fastapi==0.116.2",
  "pydantic==2.11.9",
  "python-multipart==0.0.20",
  "pandas==2.3.2",
  "openpyxl==3.1.5"
]

[project.optional-dependencies]
ci = ["build==1.3.0", "wheel==0.45.1", "setuptools==75.5.0"]

[project.scripts]
analyse = "scripts.analyse:main"
run_api = "api.server:run"

# [tool.black]
# line-length = 79
# use-tabs = false
# tab-width = 2
